--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.0",
-    "pg": "^8.16.0"
+    "pg": "^8.16.0",
+    "pgvector": "^0.2.1"
   }
 }
