.env.example updated

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,14 @@
-PORT= ""
-JWT_AUTH_TOKEN=""
-REFRESH_TOKEN = ""
-CLOUDINARY_CLOUDNAME=""
-CLOUDINARY_API_KEY= ""
-CLOUDINARY_API_SECRET= ""
+PORT=
+
+JWT_AUTH_TOKEN=''
+REFRESH_TOKEN = ''
+CLOUDINARY_CLOUDNAME=''
+CLOUDINARY_API_KEY= ''
+CLOUDINARY_API_SECRET= ''
+
+DB_HOST= ""
+DB_PORT= ""
+DB_NAME= ""
+DB_PASSWORD= ""
+DB_USER= ""
+
