--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,14 +1,26 @@
 PORT=
 
-JWT_AUTH_TOKEN=''
-REFRESH_TOKEN = ''
+#cloudinary
 CLOUDINARY_CLOUDNAME=''
 CLOUDINARY_API_KEY= ''
 CLOUDINARY_API_SECRET= ''
 
+#supabase
+SUPABASE_URL= ""
+SUPABASE_KEY= ""
 DB_HOST= ""
 DB_PORT= ""
 DB_NAME= ""
 DB_PASSWORD= ""
 DB_USER= ""
+
+#firebase
+APIKEY= ""
+AUTHDOMAIN= ""
+PROJECTID= ""
+STORAGEBUCKET= ""
+MESSAGINGSENDERID= ""
+APPID= ""
+MEASUREMENTID= ""
+
 
