--- a/backend/package.json
+++ b/backend/package.json
@@ -11,5 +11,8 @@
     "pg": "^8.16.0",
     "pgvector": "^0.2.1"
   },
-  "type": "module"
+  "type": "module",
+  "scripts": {
+    "start" : "node server.js"
+  }
 }
